Trying to fix the plant image gallery gaps

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -319,7 +319,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .plant-img {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
 }
 
